
(library
  (name imgui_sys)
  (public_name imgui.sys)
  (modules imgui_sys imgui_generated_ffi)
  (foreign_stubs
    (language c)
    ;(flags -I . -lcimgui)
    (flags :standard -lstdc++)
    (names imgui_generated_ffi))
  ;(c_flags -I ../../vendor/cimgui/)
  (foreign_archives cimgui)
  (install_c_headers cimgui)
  ;(static_only)
  (c_library_flags -lstdc++)
  (libraries ctypes ctypes.stubs imgui.generated_types imgui.generated_funs)
  (flags :standard -warn-error -a+8 -w -9 -linkall))

(copy_files ../../vendor/cimgui/*.cpp)
(copy_files ../../vendor/cimgui/*.h)
(copy_files ../../vendor/cimgui/imgui/*.cpp)
(copy_files ../../vendor/cimgui/imgui/misc/cpp/*.cpp)

; NOTE: try to use `foreign_library`
(foreign_library
 (archive_name cimgui)
 (language cxx)
 (flags :standard -lstdc++)
 (include_dirs imgui)
 (names cimgui imgui imgui_demo imgui_draw imgui_widgets
        imgui_stdlib))

(rule
  (with-stdout-to "imgui_generated_ffi.ml"
                  (run "../bindgen/funs_stubgen_driver.exe" -ml)))

(rule
  (with-stdout-to "imgui_generated_ffi.c"
                  (run "../bindgen/funs_stubgen_driver.exe" -c)))
