
; ========================
; stubgen for types

(library
  (name imgui_opengl3_types_f)
  (public_name imgui.opengl3_types_f)
  (modules imgui_opengl3_types_f)
  (flags :standard -warn-error -a+8 -w -9)
  (libraries ctypes ctypes.stubs))

(executable
  (name imgui_opengl3_types_stubgen)
  (modes native)
  (modules imgui_opengl3_types_stubgen)
  (libraries ctypes ctypes.stubs imgui_opengl3_types_f))

(rule
  (with-stdout-to imgui_opengl3_generate_types.c
                  (run ./imgui_opengl3_types_stubgen.exe)))

; Stubgen, phase 2
; C executable that checks struct offsets and outputs ML file
(rule
  (targets types_stubgen.exe)
  (deps (:types_stubgen ./imgui_opengl3_generate_types.c)
        (source_tree ../../vendor/cimgui/))
  (action (bash "\
 %{cc} \
  -I %{ocaml_where} \
  -I `dirname %{lib:ctypes:ctypes_cstubs_internals.h}` \
  -I ../../../vendor/cimgui/generator/output/ \
  -I ../../../vendor/cimgui/imgui/ \
  `pkg-config --cflags gl` \
  %{types_stubgen} \
  -o %{targets}")))


(rule (with-stdout-to "imgui_opengl3_generated_types.ml"
                      (run "./types_stubgen.exe")))


(library
  (name imgui_opengl3_generated_types)
  (public_name imgui.opengl3_generated_types)
  (modes native)
  (modules imgui_opengl3_generated_types)
  (flags :standard -warn-error -a+8 -w -9)
  (libraries ctypes imgui_opengl3_types_f))

; ===============
; stubgen for functions

(executable
  (name imgui_opengl3_ffi_stubgen)
  (modules imgui_opengl3_ffi_stubgen)
  (modes native)
  (flags :standard -warn-error -a+8 -w -9)
  (libraries yojson ty_g ctypes.foreign ctypes
             imgui.opengl3_ffi_f imgui.opengl3_generated_types))

(rule
  (deps ./imgui_opengl3_ffi_stubgen.exe ../../bindgen/types.data)
  (action
   (with-stdout-to "imgui_opengl3_generated_funs.ml"
                   (run "./imgui_opengl3_ffi_stubgen.exe" -ml))))

(rule
  (deps ./imgui_opengl3_ffi_stubgen.exe ../../bindgen/types.data)
  (action
   (with-stdout-to "imgui_opengl3_generated_funs.c"
                   (run "./imgui_opengl3_ffi_stubgen.exe" -c))))

(library
  (name imgui_opengl3_ffi_f)
  (public_name imgui.opengl3_ffi_f)
  (modules imgui_opengl3_ffi_f)
  (flags :standard -warn-error -a+8 -w -9)
  (libraries ctypes ctypes.stubs imgui.sys
             imgui.opengl3_types_f imgui.opengl3_generated_types))

; main binding

(library
  (name imgui_opengl3)
  (public_name imgui.opengl3)
  (modules imgui_opengl3 imgui_opengl3_generated_funs)
  (foreign_stubs
    (language cxx)
    (include_dirs
      ../../../vendor/cimgui/generator/output/ ../../../vendor/cimgui/imgui/)
    (flags (:include cflags) -fPIC "-DIMGUI_IMPL_API=extern \"C\"")
    (names imgui_impl_opengl3))
  (foreign_stubs
    (language c)
    (flags (:include cflags))
    (names imgui_opengl3_generated_funs))
  (c_library_flags -lstdc++ -fPIC (:include lflags))
  (libraries imgui.sys imgui.opengl3_types_f tgls.tgl3 ctypes ctypes.stubs
             imgui.opengl3_ffi_f
             imgui.opengl3_generated_types))

(rule (with-stdout-to cflags
                      (progn (echo "(")
                             (run pkg-config --cflags glew)
                             (echo ")"))))
(rule (with-stdout-to lflags
                      (progn (echo "(")
                             (run pkg-config --libs glew)
                             (echo ")"))))

(copy_files ../../../vendor/cimgui/generator/output/*.h)
(copy_files ../../../vendor/cimgui/imgui/examples/imgui_impl_opengl3.cpp)
