
; ========================
; stubgen for types

(library
  (name imgui_vulkan_types_f)
  (public_name imgui.vulkan_types_f)
  (optional)
  (modules imgui_vulkan_types_f)
  (flags :standard -warn-error -a+8 -w -9)
  (libraries ctypes ctypes.stubs))

(executable
  (name imgui_vulkan_types_stubgen)
  (modes native)
  (modules imgui_vulkan_types_stubgen)
  (libraries ctypes ctypes.stubs imgui_vulkan_types_f))

(rule
  (with-stdout-to imgui_vulkan_generate_types.c
                  (run ./imgui_vulkan_types_stubgen.exe)))

; Stubgen, phase 2
; C executable that checks struct offsets and outputs ML file
(rule
  (targets types_stubgen.exe)
  (deps (:types_stubgen ./imgui_vulkan_generate_types.c)
        (source_tree ../../vendor/cimgui/))
  (action (bash "\
 %{cc} \
  -I %{ocaml_where} \
  -I `dirname %{lib:ctypes:ctypes_cstubs_internals.h}` \
  -I ../../../vendor/cimgui/generator/output/ \
  -I ../../../vendor/cimgui/imgui/ \
  `pkg-config --cflags vulkan` \
  %{types_stubgen} \
  -o %{targets}")))


(rule (with-stdout-to "imgui_vulkan_generated_types.ml"
                      (run "./types_stubgen.exe")))


(library
  (name imgui_vulkan_generated_types)
  (public_name imgui.vulkan_generated_types)
  (optional)
  (modes native)
  (modules imgui_vulkan_generated_types)
  (flags :standard -warn-error -a+8 -w -9)
  (libraries ctypes imgui_vulkan_types_f))

; ===============
; stubgen for functions

(executable
  (name imgui_vulkan_ffi_stubgen)
  (modules imgui_vulkan_ffi_stubgen)
  (modes native)
  (optional)
  (flags :standard -warn-error -a+8 -w -9)
  (libraries yojson ty_g ctypes.foreign ctypes
             imgui.vulkan_ffi_f imgui.vulkan_generated_types))

(rule
  (deps ./imgui_vulkan_ffi_stubgen.exe ../../bindgen/types.data)
  (action
   (with-stdout-to "imgui_vulkan_generated_funs.ml"
                   (run "./imgui_vulkan_ffi_stubgen.exe" -ml))))

(rule
  (deps ./imgui_vulkan_ffi_stubgen.exe ../../bindgen/types.data)
  (action
   (with-stdout-to "imgui_vulkan_generated_funs.c"
                   (run "./imgui_vulkan_ffi_stubgen.exe" -c))))

(library
  (name imgui_vulkan_ffi_f)
  (public_name imgui.vulkan_ffi_f)
  (optional)
  (modules imgui_vulkan_ffi_f)
  (flags :standard -warn-error -a+8 -w -9)
  (libraries ctypes ctypes.stubs imgui.sys
             imgui.vulkan_types_f imgui.vulkan_generated_types))

; main binding

(library
  (name imgui_vulkan)
  (public_name imgui.vulkan)
  (modules imgui_vulkan imgui_vulkan_generated_funs)
  (optional)
  (foreign_stubs
    (language cxx)
    (include_dirs
      ../../../vendor/cimgui/generator/output/ ../../../vendor/cimgui/imgui/)
    (flags (:include cflags) -fPIC "-DIMGUI_IMPL_API=extern \"C\"")
    (names imgui_impl_vulkan))
  (foreign_stubs
    (language c)
    (flags (:include cflags))
    (names imgui_vulkan_generated_funs))
  (c_library_flags -lstdc++ (:include lflags))
  (libraries imgui.sys imgui.vulkan_types_f ctypes ctypes.stubs
             imgui.vulkan_ffi_f
             imgui.vulkan_generated_types))

(rule (with-stdout-to cflags
                      (progn (echo "(")
                             (run pkg-config --cflags vulkan)
                             (echo ")"))))
(rule (with-stdout-to lflags
                      (progn (echo "(")
                             (run pkg-config --libs vulkan)
                             (echo ")"))))

(copy_files ../../../vendor/cimgui/generator/output/*.h)
(copy_files ../../../vendor/cimgui/imgui/examples/imgui_impl_vulkan.cpp)
